# sparqlunicornGoesGIS-ontdoc

./: CITATION.CFF  LICENSE  MANIFEST.in  README.md  a00002.html  a00002.js  a00005.html  a00005.js  a00006.html  a00008.html  a00008.js  a00009.html  a00009.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00014.html  a00014.js  a00017.html  a00017.js  a00020.html  a00020.js  a00023.html  a00023.js  a00026.html  a00026.js  a00029.html  a00029.js  a00032.html  a00032.js  a00035.html  a00035.js  a00038.html  a00038.js  a00041.html  a00041.js  a00044.html  a00044.js  (+415 more)
.github/workflows/: python-app.yml  udoc.yml
doc/: docconfig.py  docdefaults.py  docgeneration.py  docutils.py  pyowl2vowl.py
docs/: Doxyfile  header.html
export/api/: ckanexporter.py  iiifexporter.py  ogcapifeaturesexporter.py  solidexporter.py
export/data/: exporterutils.py  geoexporter.py  graphexporter.py  miscexporter.py
resources/html/default/css/: style.css
resources/html/default/js/: startscripts.js
resources/html/default/templates/: footer.html  geoexports.html  header.html  maptemplate.html  nongeoexports.html  sparql.html  threejstemplate.html  vowlwrapper.html
resources/html/default/templates/includes/: chartviewtemplate.html  header.html
resources/html/default/templates/layouts/: imagegrid.html  main.html  sparql.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+47 more)
src/sparqlunicorn_ontdoc/: docgeneration.py  imagedoc.py
src/sparqlunicorn_ontdoc/doc/: classtreeutils.py  docconfig.py  docdefaults.py  docutils.py  graphutils.py  literalutils.py  pyowl2vowl.py  templateutils.py
src/sparqlunicorn_ontdoc/export/: exporterutils.py
src/sparqlunicorn_ontdoc/export/api/: carddavexporter.py  ckanexporter.py  iiifexporter.py  ogcapifeaturesexporter.py  prezexporter.py  solidexporter.py  stacapiexporter.py  wfsexporter.py
src/sparqlunicorn_ontdoc/export/data/: geoexporter.py  graphexporter.py  htmlexporter.py  miscexporter.py  voidexporter.py  vowlexporter.py
src/sparqlunicorn_ontdoc/export/pages/: bibpage.py  buildlogpage.py  cidocoverviewpage.py  dcatviewpage.py  geometryviewpage.py  graphviewerpage.py  imagegridpage.py  indexviewpage.py  lexiconpage.py  mediapage.py  model3dpage.py  observationpage.py  owltimepage.py  page.py  pageutils.py  personpage.py  shaclpage.py  sparqlpage.py  textannopage.py
src/sparqlunicorn_ontdoc/resources/: prefixes.json
src/sparqlunicorn_ontdoc/resources/html/: templateconf_template.json
src/sparqlunicorn_ontdoc/resources/html/default/css/: style.css
(+27 files in other folders)
